refactored chapter listings dropdown, tests passing

--- a/app/views/books/_chapters.html.erb
+++ b/app/views/books/_chapters.html.erb
@@ -2,60 +2,14 @@
 <div class='dropdown-panel' id='chapters-dropdown'>
   <div class="three-column">
     <div class='column-left'>
-      <ol class='book-toc'>
-        <% @book.chapters[0..2].each do |chapter| %>
-        <li class='chapter'>
-        <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
-          <ol>
-            <% chapter.sections.each do |section| %>
-              <% if !section.title.empty? %>
-                <li>
-                  <%= chapter.number %>.<%= section.number %>
-                  <a href="/book/<%= @book.code %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-                </li>
-              <% end %>
-            <% end %>
-          </ol>
-        </li>
-        <% end %>
-      </ol>
+      <%= render :partial => 'chapter_listings', :locals => {:column => 1} %>
     </div>
     <div class='column-middle'>
-      <ol class='book-toc'>
-        <% @book.chapters[3..5].each do |chapter| %>
-        <li class='chapter'>
-        <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
-          <ol>
-            <% chapter.sections.each do |section| %>
-              <% if !section.title.empty? %>
-                <li>
-                  <%= chapter.number %>.<%= section.number %>
-                  <a href="/book/<%= @book.code %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-                </li>
-              <% end %>
-            <% end %>
-          </ol>
-        </li>
-        <% end %>
-      </ol>
+      <%= render :partial => 'chapter_listings', :locals => {:column => 2} %>
     </div>
     <div class='column-right'>
-      <ol class='book-toc'>
-        <% @book.chapters[6..8].each do |chapter| %>
-        <li class='chapter'>
-        <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
-          <ol>
-            <% chapter.sections.each do |section| %>
-              <% if !section.title.empty? %>
-                <li>
-                  <%= chapter.number %>.<%= section.number %>
-                  <a href="/book/<%= @book.code %>/<%= u(section.slug) %>"><%=raw section.title %></a>
-                </li>
-              <% end %>
-            <% end %>
-          </ol>
-        </li>
-        <% end %>
+      <%= render :partial => 'chapter_listings', :locals => {:column => 3} %>
+      <ol class="book-toc">
         <li class='chapter'>
           <h2><a href="/book/commands">Index of Commands</a></h2>
         </li>
