Add Ry's Git Tutorial to External Links page

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -39,6 +39,14 @@
       <h3>Diving Deeper</h3>
       <ul class='content-list'>
         <li>
+          <h4><a
+		  href="http://rypress.com/tutorials/git/index.html">Ry&rsquo;s Git
+		  Tutorial</a></h4>
+          <p class='description'>
+			A hands-on introduction to the entire Git porcelain.
+          </p>
+        </li>
+        <li>
           <h4><a href="http://hoth.entp.com/output/git_for_designers.html">Git for Designers</a></h4>
           <p class='description'>
             No knowledge of version control? No problem.
