Add Ry's Git Tutorial to external links
Just came across this one. Looks like a lot of good work went into 
this tutorial. I'd say it's worthy of exposure on git-scm.com

The author has [asked for feedback on the git-user mailing list](https://groups.google.com/forum/?fromgroups=#!topic/git-users/Bf9WItxbSto).

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -33,6 +33,12 @@
             A guided tour that walks through the fundamentals of Git.
           </p>
         </li>
+        <li>
+          <h4><a href="http://rypress.com/tutorials/git/index.html/">Ry’s Git Tutorial</a></h4>
+          <p class='description'>
+            Complete Git tutorial with lots of examples and illustrations.
+          </p>
+        </li>
       </ul>
     </div>
     <div class='column-right'>
