ugh, placement typo

--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -113,7 +113,7 @@ ul.related-material {
       @include background-image-2x(/images/icons/document-sm, 12px, 17px, 3px 0);
     }
     &.book {
-      @include background-image-2x(/images/icons/book-sm, 17px, 17px, 0, 0);
+      @include background-image-2x(/images/icons/book-sm, 17px, 17px, 0 0);
     }
     &.video {
       @include background-image-2x(/images/icons/film-sm, 17px, 17px, 2px 0);
