Tweak how <tt> blocks in manpages are rendered
See issue #243

--- a/app/assets/stylesheets/man-pages.css.scss
+++ b/app/assets/stylesheets/man-pages.css.scss
@@ -7,11 +7,12 @@
       font-style: normal;
     }
     tt {
-      background-color: #eee0b5;
-      padding: 2px;
-      font-family: $fixed-width-font-family !important;
+      @extend code;
+      display: inline;
+      padding: 1px;
     }
   }
+
   p.nutshell {
     background-color: #e8e7dd;
     padding: 1em;
