manual page title

--- a/app/views/doc/man.html.erb
+++ b/app/views/doc/man.html.erb
@@ -1,5 +1,6 @@
 <% @section    = 'documentation' %>
 <% @subsection = 'reference' %>
+<% @page_title = "#{@file.name} manual" %>
 
 <% content_for :sidebar do %>
   <%= cache("#{@cache_key}-related") do %>
