update text for references to Software Freedom Conservancy
Software Freedom Conservancy is attempting to normalize
style guidelines for references to the organization. From
their guidelines sent to project heads:

  - please do not add a "the" in front of "Software Freedom
    Conservancy" or "Conservancy" in any written context.
    We've admittedly used a "the" intermittently in the
    past, but we'd like to be consistent going forward.  So,
    instead of "Project X is a member of the Conservancy,"
    just say "Project X is a member of Conservancy."

  - please use "Conservancy" as the abbreviation for
    "Software Freedom Conservancy."  We're discontinuing the
    use of the acronym "SFC," and we ask your help in doing
    the same.

This commit updates all references across git-scm.com to
match the new guidelines.

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -4,6 +4,6 @@
     Patches, suggestions, and comments are welcome.
 
   %div.sfc-member
-    Git is a member of the <a href="/sfc">Software Freedom Conservancy</a>
+    Git is a member of <a href="/sfc">Software Freedom Conservancy</a>
 
 = javascript_include_tag "jquery-1.7.1.min.js", "jquery-ui-1.8.18.custom.min.js", "jquery.defaultvalue.js", "session.min.js", "site.js"
