--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -1,19 +1,19 @@
 <div id="main">
-  <h1 id="sfc">Git and The Software Freedom Conservancy</h1>
+  <h1 id="sfc">Git and Software Freedom Conservancy</h1>
 
-  <p>Git is a member project of the <a href="http://sfconservancy.org/">Software
-  Freedom Conservancy</a>.  The SFC is a not-for-profit organization that
+  <p>Git is a member project of <a href="http://sfconservancy.org/">Software
+  Freedom Conservancy</a>.  Conservancy is a not-for-profit organization that
   provides financial and administrative assistance to open source projects.
 
   <h2 class="section-start">Donation</h2>
 
-  <p>The SFC accepts donations on git's behalf. In the past, project money has
+  <p>Conservancy accepts donations on git's behalf. In the past, project money has
   typically gone to defraying travel costs for developers to come to our annual
   <a href="https://git.wiki.kernel.org/index.php/GitTogether">GitTogether</a>
-  mini-conference.  A portion of the money goes to the SFC to cover their
+  mini-conference.  A portion of the money goes to Conservancy to cover their
   operating expenses. You can also donate <a
-  href="http://sfconservancy.org/donate">directly</a> to the Conservancy's
-  general fund.
+  href="http://sfconservancy.org/donate">directly</a> to Software
+  Freedom Conservancy's general fund.
 
   <table class="data-table software">
     <tr><td valign="top">
@@ -33,7 +33,7 @@
       </script>
       <form action="https://checkout.google.com/cws/v2/Donations/622836985124940/checkoutForm" id="BB_BuyButtonForm" method="post" name="BB_BuyButtonForm" onSubmit="return validateAmount(this.item_price_1)" target="_top">
           <input name="item_name_1" type="hidden" value="Git Donation via Software Freedom Conservancy"/>
-          <input name="item_description_1" type="hidden" value="Donation to the Git Project via the Software Freedom Conservancy."/>
+          <input name="item_description_1" type="hidden" value="Donation to the Git Project via Software Freedom Conservancy."/>
           <input name="item_quantity_1" type="hidden" value="1"/>
           <input name="item_currency_1" type="hidden" value="USD"/>
           <input name="item_is_modifiable_1" type="hidden" value="true"/>
@@ -83,7 +83,7 @@
   </pre>
   </div>
 
-  <p>The SFC can accept wire donations, but the instructions vary
+  <p>Conservancy can accept wire donations, but the instructions vary
   depending on the country of origin. Please contact <a
     href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
   for instructions.
