--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -1,23 +1,29 @@
 <p>
 This book is translated into 
-  <a href="/book/de">German</a>, 
-  <a href="/book/zh">Chinese</a>, 
+  <a href="/book/de">German</a>,
+  <a href="/book/zh">Chinese</a>,
   <a href="/book/fr">French</a>,
-  <a href="/book/ja">Japanese</a> and 
-  <a href="/book/nl">Dutch</a>.
+  <a href="/book/ja">Japanese</a>,
+  <a href="/book/nl">Dutch</a>,
+  <a href="/book/ru">Russian</a>,
+  <a href="/book/ko">Korean</a>,
+  <a href="/book/pt-br">Brazilian Portugese</a> and
+  <a href="/book/cs">Czech</a>.
 </p>
-
 <p>
-Partial translations available in 
+Partial translations available in
   <a href="/book/ar">Arabic</a>,
-  <a href="/book/cs">Czech</a>,
   <a href="/book/es">Spanish</a>,
   <a href="/book/id">Indonesian</a>,
   <a href="/book/it">Italian</a>,
   <a href="/book/mk">Macedonian</a>,
   <a href="/book/pl">Polish</a>,
+  <a href="/book/tr">Turkish</a>,
+  <a href="/book/zh-tw">Taiwanese Mandarin</a>,
+  <a href="/book/es-ni">Spanish (Nicaragua)</a>,
+  <a href="/book/ca">Catalan</a>,
   <a href="/book/th">Thai</a> and
-  <a href="/book/ru">Russian</a>.
+  <a href="/book/fi">Finnish</a>.
 </p>
 
 <hr class="sidebar"/>
