url-encode book section titles
Some of the translated section titles end in question marks.
When these are placed directly into a link without quoting,
the trailing "?" is parsed as a parameter separator, leading
to a broken link.

The same problem was fixed in #149, but only for the actual
section listing. This commit fixes the prev/next links, as
well as any direct chapter links.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,7 +16,7 @@
   <ol class='book-toc'>
     <% @book.chapters.each do |chapter| %>
     <li class='chapter'>
-    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%= chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
+    <h2><%= chapter.number %>. <a href="/book/<%= @book.code %>/<%=u chapter.sections.first.slug %>"><%=raw chapter.title %></a></h2>
       <ol>
         <% chapter.sections.each do |section| %>
           <% if !section.title.empty? %>
