update gui page to include sourcetree for windows

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -71,6 +71,12 @@
           %p.description
             <strong>Platforms:</strong> Windows</br>
             <strong>Price:</strong> Free
+        %li.windows
+          =link_to(image_tag('guis/sourcetree-for-windows@2x.png', {:width => '294', :height => '166'}), "http://www.sourcetreeapp.com/")
+          %h4= link_to "SourceTree", "http://www.sourcetreeapp.com/"
+          %p.description
+            <strong>Platforms:</strong> Windows</br>
+            <strong>Price:</strong> Free
         %li.mac.windows.linux
           =link_to(image_tag('guis/git-cola@2x.png', {:width => '294', :height => '166'}), "http://git-cola.github.com/")
           %h4= link_to "git-cola", "http://git-cola.github.com/"
