Process tables in the book
Preprocess the markdown files to change the tables into a format which
RedCarpet can convert to a HTML table. Then add a class to this table so
that we can apply css on it.

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -164,6 +164,25 @@ ol.book-toc {
   font-size: 0.8em;
 }
 
+.book table.ref {
+  margin-bottom: 10px;
+  width:  100%;
+}
+
+.book table.ref tr {
+  border-color: #777;
+  border: 1px solid;
+}
+
+.book table.ref th, td {
+  padding: 5px;
+}
+
+.book table.ref th:nth-child(1), td:nth-child(1) {
+  padding: 5px;
+  width: 25%;
+}
+
 #book-chapters {
   @extend .section-nav-container;
   #chapters-dropdown {
