Better localized language name for Chinese.

--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -1,7 +1,7 @@
 <p>
 This book is translated into 
   <a href="/book/de">German</a>, 
-  <a href="/book/zh">Chinese</a>, 
+  <a href="/book/zh">中文</a>, 
   <a href="/book/fr">French</a>, 
   <a href="/book/ja">Japanese</a>, 
   <a href="/book/nl">Dutch</a>, 
