Added book - Git in the trenches

--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -99,6 +99,13 @@
             By Scott Chacon
           </p>
         </li>
+        <li>
+          <a href="http://cbx33.github.com/gitt/"><img src="/images/books/git-in-the-trenches@2x.jpg" /></a>
+          <h4><a href="http://cbx33.github.com/gitt/">Git in the Trenches</a></h4>
+          <p class='description'>
+            By Peter Savage
+            <img class="creative-commons" src="/images/creative-commons.png" />
+        </li>
       </ul>
     </div>
     <div class='column-right'>
