--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -77,6 +77,12 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
+        %li.mac.windows.linux
+          =link_to(image_tag('guis/giteye@2x.png', {:width => '294', :height => '166'}), "http://www.giteyeapp.com/")
+          %h4= link_to "GitEye", "http://www.giteyeapp.com/"
+          %p.description
+            <strong>Platforms:</strong> Windows, Mac, Linux</br>
+            <strong>Price:</strong> Free
 
   %div.callout
     %p
