Typo fix in layout.html.haml

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -34,7 +34,7 @@
 
           <img class="illustration" src="images/branching-illustration@2x.png" width="389" height="251" />
 
-      %div#conent-wrapper
+      %div#content-wrapper
         %div.inner
           =yield
           = partial 'shared/footer'
