--- a/app/views/doc/ext.html.erb
+++ b/app/views/doc/ext.html.erb
@@ -18,7 +18,7 @@
         <li>
           <h4><a href="/docs/gittutorial">Official Git Tutorial</a></h4>
           <p class='description'>
-            The official gittutorial man page is a good place to start.
+            The official gittutorial main page is a good place to start.
           </p>
         </li>
         <li>
