Add RSS feed for blog

--- a/app/views/layouts/layout.html.haml
+++ b/app/views/layouts/layout.html.haml
@@ -8,6 +8,7 @@
     %meta{:charset => "utf-8"}
     %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}
     %link{:rel => "shortcut icon", "href" => "/favicon.png", :type => "image/png"}
+    %link{:rel => "alternate", "href" => "/blog.rss", :type => "application/rss+xml", "title" => "Git - Blog"}
     = stylesheet_link_tag "git-scm.css"
     = javascript_include_tag "modernizr.js", "modernizr-tests.js"
     /[if (gte IE 6)&(lte IE 8)]
