Feed content goes in description
(not content:encoded)

--- a/app/views/blog/feed.haml
+++ b/app/views/blog/feed.haml
@@ -17,5 +17,4 @@
         -if post.last['author']
           %author #{post.last['author']} 
         %pubDate #{entry[:date_published].rfc822}
-        %description 
-        %content:encoded <![CDATA[#{post.first}]]>
+        %description #{post.first}
