Just removed a likely-unintended extra word

--- a/app/views/blog/posts/2011-07-11-reset.html
+++ b/app/views/blog/posts/2011-07-11-reset.html
@@ -231,7 +231,7 @@ would have done.</p>
   <small>having --mixed feelings</small>
 </h3>
 
-<p>Note that if you run <code>git status</code> now you'll see the in green the
+<p>Note that if you run <code>git status</code> now you'll see in green the
 difference between the Index and what the new HEAD is.</p>
 
 <p>The next thing <code>reset</code> will do 
