update list of languages and add link to progit

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -20,10 +20,16 @@ Partial translations available in
   <a href="/book/pl">Polish</a>,
   <a href="/book/tr">Turkish</a>,
   <a href="/book/zh-tw">Taiwanese Mandarin</a>,
+</p>
+<p>
+Translation started for
   <a href="/book/es-ni">Spanish (Nicaragua)</a>,
   <a href="/book/ca">Catalan</a>,
   <a href="/book/th">Thai</a> and
   <a href="/book/fi">Finnish</a>.
 </p>
-
 <hr class="sidebar"/>
+<p>
+The source of this book and the translations is <a href="https://github.com/progit/progit">hosted on GitHub.</a></br>
+Patches, suggestions, and comments are welcome.
+</p>
