--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -7,7 +7,7 @@ This book is translated into
   <a href="/book/nl">Dutch</a>,
   <a href="/book/ru">Russian</a>,
   <a href="/book/ko">Korean</a>,
-  <a href="/book/pt-br">Brazilian Portugese</a> and
+  <a href="/book/pt-br">Brazilian Portuguese</a> and
   <a href="/book/cs">Czech</a>.
 </p>
 <p>
