Add ungit to gui list

--- a/app/views/downloads/guis/index.html.haml
+++ b/app/views/downloads/guis/index.html.haml
@@ -83,6 +83,12 @@
           %p.description
             <strong>Platforms:</strong> Windows, Mac, Linux</br>
             <strong>Price:</strong> Free
+        %li.mac.windows.linux
+          =link_to(image_tag('guis/ungit@2x.png', {:width => '294', :height => '166'}), "https://github.com/FredrikNoren/ungit")
+          %h4= link_to "Ungit", "https://github.com/FredrikNoren/ungit"
+          %p.description
+            <strong>Platforms:</strong> Windows, Mac, Linux</br>
+            <strong>Price:</strong> Free
 
   %div.callout
     %p
