--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,56 @@
-<%= render 'shared/head' %>
+<!DOCTYPE html>
+<html lang="en">
 
-<div class="container">
-  <%= render 'shared/header' %>
-  <%= yield %>
-</div>
+<head>
+
+  <meta charset='utf-8'>
+  <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
+
+  <title><%= @page_title.present? ? @page_title : "Git" %></title>
+
+  <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
+  <link rel="alternate" href="/blog.rss" type="application/rss+xml" title="Git - Blog">
+
+  <%= stylesheet_link_tag "git-scm" %>
+  <%= javascript_include_tag "modernizr", "modernizr-tests" %>
+  <!--[if (gte IE 6)&(lte IE 8)]>
+  <%= javascript_include_tag "/javascripts/selectivizr-min" %>
+  <![endif]-->
+
+  <script src="http://use.typekit.com/jsq2fql.js" type="text/javascript"></script>
+  <script>
+    //<![CDATA[
+      try{Typekit.load();}catch(e){}
+    //]]>
+  </script>
+
+</head>
+
+<body id="<%= @section %>">
+
+  <div class="inner">
+    <%= render partial: "shared/header" %>
+  </div> <!-- .inner -->
+
+  <% if controller_name == "site" %>
+    <%= render partial: "shared/masthead" %>
+    <div id="content-wrapper">
+      <div class="inner">
+        <%= yield %>
+        <%= render partial: "shared/footer" %>
+      </div> <!-- .inner -->
+    </div> <!-- #content-wrapper -->
+  <% else %>
+    <div class="inner">
+      <div id="content-wrapper">
+        <%= render partial: "shared/sidebar" %>
+        <div id="content">
+          <%= yield %>
+        </div>
+      </div>
+      <%= render partial: "shared/footer" %>
+    </div>
+  <% end %>
 
 </body>
 </html>
