--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
   <link href='/favicon.ico' rel='shortcut icon' type='image/x-icon'>
   <link rel="alternate" href="/blog.rss" type="application/rss+xml" title="Git - Blog">
 
-  <%= stylesheet_link_tag "git-scm" %>
-  <%= javascript_include_tag "modernizr", "modernizr-tests" %>
+  <%= stylesheet_link_tag "git-scm.css" %>
+  <%= javascript_include_tag "modernizr.js", "modernizr-tests.js" %>
   <!--[if (gte IE 6)&(lte IE 8)]>
-  <%= javascript_include_tag "/javascripts/selectivizr-min" %>
+  <%= javascript_include_tag "/javascripts/selectivizr-min.js" %>
   <![endif]-->
 
   <script src="http://use.typekit.com/jsq2fql.js" type="text/javascript"></script>
