Update git-scm.css and remove static asset files

--- a/app/assets/stylesheets/errors.css.scss
+++ b/app/assets/stylesheets/errors.css.scss
@@ -1,8 +1,8 @@
 @import "compass";
 @include global-reset;
 
-@import "variables.css.scss";
-@import "typography.css.scss";
+@import "variables";
+@import "typography";
 
 body {
   font-size: $base-font-size;
