--- a/app/assets/stylesheets/git-scm.css.scss
+++ b/app/assets/stylesheets/git-scm.css.scss
@@ -1,17 +1,17 @@
 @import "compass";
 @include global-reset;
 
-@import "mixins.css.scss";
-@import "variables.css.scss";
-@import "layout.css.scss";
-@import "typography.css.scss";
-@import "downloads.css.scss";
-@import "search.css.scss";
-@import "front-page.css.scss";
-@import "sidebar.css.scss";
-@import "reference.css.scss";
-@import "forms.css.scss";
-@import "man-pages.css.scss";
-@import "book.css.scss";
-@import "lists.css.scss";
-@import "blog.css.scss";
+@import "mixins";
+@import "variables";
+@import "layout";
+@import "typography";
+@import "downloads";
+@import "search";
+@import "front-page";
+@import "sidebar";
+@import "reference";
+@import "forms";
+@import "man-pages";
+@import "book";
+@import "lists";
+@import "blog";
