hide invisible flippy book overflow, fixes #322

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -5,6 +5,7 @@
   border: solid 1px lighten($base-border-color, 10%);
   padding-top: 20px ! important;
   padding-bottom: 20px ! important;
+  overflow: hidden;
 }
 #book-intro {
   position: absolute;
