sfc: mention that we can take stock donations
This is a new thing that SFC can do. I don't anticipate many
such offers, but it doesn't hurt to mention it for
completeness.

--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -48,4 +48,10 @@
   depending on the country of origin. Please contact <a
     href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
   for instructions.
+
+  <p>Conservancy also accepts stock donations on behalf of the Git
+  project. If you would like to donate stock, please contact <a
+    href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
+  for instructions on how to initiate the transfer.
+
 </div>
