--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -25,8 +25,9 @@ Partial translations available in
 Translation started for
   <a href="/book/es-ni">Spanish (Nicaragua)</a>,
   <a href="/book/ca">Catalan</a>,
-  <a href="/book/th">Thai</a> and
-  <a href="/book/fi">Finnish</a>.
+  <a href="/book/th">Thai</a>,
+  <a href="/book/fi">Finnish</a> and
+  <a href="/book/eo">Esperanto</a>.
 </p>
 <hr class="sidebar"/>
 <p>
