--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -1,5 +1,5 @@
 <p>
-This book is translated into
+This book is translated into 
   <a href="/book/de">German</a>,
   <a href="/book/zh">中文</a>,
   <a href="/book/fr">French</a>,
@@ -7,7 +7,7 @@ This book is translated into
   <a href="/book/nl">Dutch</a>,
   <a href="/book/ru">Russian</a>,
   <a href="/book/ko">Korean</a>,
-  <a href="/book/pt-br">Brazilian Portugese</a> and
+  <a href="/book/pt-br">Brazilian Portuguese</a> and
   <a href="/book/cs">Czech</a>.
 </p>
 <p>
@@ -16,20 +16,28 @@ Partial translations available in
   <a href="/book/es">Spanish</a>,
   <a href="/book/id">Indonesian</a>,
   <a href="/book/it">Italian</a>,
+  <a href="/book/fi">Finnish</a>,
   <a href="/book/mk">Macedonian</a>,
   <a href="/book/pl">Polish</a>,
-  <a href="/book/tr">Turkish</a>,
+  <a href="/book/tr">Turkish</a> and
   <a href="/book/zh-tw">Taiwanese Mandarin</a>,
 </p>
 <p>
-Translation started for
-  <a href="/book/es-ni">Spanish (Nicaragua)</a>,
+Translations started for
+  <a href="/book/az">Azerbaijani</a>,
+  <a href="/book/be">Belarusian</a>,
   <a href="/book/ca">Catalan</a>,
+  <a href="/book/eo">Esperanto</a>.
+  <a href="/book/es-ni">Spanish (Nicaragua)</a>,
+  <a href="/book/hu">Hungarian</a>,
+  <a href="/book/no-nb">Norwegian Bokmål</a>,
+  <a href="/book/ro">Romanian</a>,
+  <a href="/book/sr">Serbian</a>,
   <a href="/book/th">Thai</a> and
-  <a href="/book/fi">Finnish</a>.
+  <a href="/book/vi">Vietnamese</a>.
 </p>
 <hr class="sidebar"/>
 <p>
-The source of this book and the translations is <a href="https://github.com/progit/progit">hosted on GitHub.</a></br>
+The source of this book and the translations are <a href="https://github.com/progit/progit">hosted on GitHub.</a></br>
 Patches, suggestions, and comments are welcome.
 </p>
