Added scrollbars for overflowing lines. Fixes #354
Added scrollbars for overflowing lines of code in code snippet blocks.

--- a/app/assets/stylesheets/typography.css.scss
+++ b/app/assets/stylesheets/typography.css.scss
@@ -218,6 +218,7 @@ code {
   color: $orange;
   font-family: $fixed-width-font-family !important;
   line-height: $fixed-width-line-height;
+  overflow: auto;
 }
 
 // Quotes
