Fix Downloads table layout.

--- a/app/assets/stylesheets/lists.css.scss
+++ b/app/assets/stylesheets/lists.css.scss
@@ -148,6 +148,7 @@ table.binaries {
   td {
     padding: 8px 20px 6px 0;
     position: relative;
+    width: auto;
   }
   a {
     font-weight: bold;
