Fix 404 links to old github url (gitscm-next)

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <div class="site-source">
-    This <a href="https://github.com/git/gitscm-next/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/git/gitscm-next">hosted on GitHub.</a><br>
+    This <a href="https://github.com/git/git-scm.com/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/git/git-scm.com">hosted on GitHub.</a><br>
     Patches, suggestions, and comments are welcome.
   </div>
   <div class="sfc-member">
