Make the distinction between source and platform releases clearer
The current wording seems to make the difference too subtle for a casual
reader; try to clear this up by:

- naming the latest release "source" instead of "stable" release, to
  make clearer what it is that we're showing the version for.

- reword the button to "Downloads" for a platform, which makes it a noun
  for the available downloads, rather than a verb which can too easily
  be taken to mean "download this version"

This should reduce the incidence of people complaining that the version
in the front is erroneous.

--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -1,5 +1,5 @@
 %div.monitor
-  %h4 Latest stable release
+  %h4 Latest source release
   %span.version= latest_version
 
   =link_to "Release Notes", latest_relnote_url
