--- a/app/views/shared/_masthead.html.erb
+++ b/app/views/shared/_masthead.html.erb
@@ -1,22 +1,21 @@
 <div id="masthead">
   <div class="inner">
     <p>
-      Git is a <%= link_to "free and open source", "/about/free-and-open-source" %>
-      distributed version control system designed to handle everything from small to
-      very large projects with speed and efficiency.
+      <%= t(".git_masthead_p1_html", :link => link_to(t(".free_and_open_source"), "/about/free-and-open-source")) %>
     </p>
 
     <p>
-      Git is <%= link_to "easy to learn", "/documentation" %> and has a
-      <%= link_to "tiny footprint with lightning fast performance", "/about/small-and-fast" %>.
-      It outclasses SCM tools like Subversion, CVS, Perforce, and ClearCase
-      with features like <%= link_to "cheap local branching", "/about/branching-and-merging" %>,
-      convenient <%= link_to "staging areas", "/about/staging-area" %>, and
-      <%= link_to "multiple workflows", "/about/distributed" %>.
+      <%= t(".git_masthead_p2_html", :link_01 => link_to(t(".easy_to_learn"), "/documentation"),
+          :link_02 => link_to(t(".tiny_footprint"), "/about/small-and-fast"),
+          :link_03 => link_to(t(".cheap_local_branching"), "/about/branching-and-merging"),
+          :link_04 => link_to(t(".staging_areas"), "/about/staging-area"),
+          :link_05 => link_to(t(".multiple_workflows"), "/about/distributed"))
+      %>
     </p>
 
     <p class="promo">
-      <img src="https://d1ffx7ull4987f.cloudfront.net/images/achievements/large_badge/121/completed-try-git-1d5111823aae2bb9d14fbcb663998353.png" height="42" width="42" style="float: left; margin: -2px 4px 0 0;"/> Learn Git in your browser for free with <a href="http://try.github.com">Try Git</a>.
+      <img src="https://d1ffx7ull4987f.cloudfront.net/images/achievements/large_badge/121/completed-try-git-1d5111823aae2bb9d14fbcb663998353.png" height="42" width="42" style="float: left; margin: -2px 4px 0 0;"/>
+      <%= t(".learn_git_html") %>
     </p>
 
     <img class="illustration" src="/images/branching-illustration@2x.png" width="389" height="251" />
