--- a/app/views/shared/_monitor.html.haml
+++ b/app/views/shared/_monitor.html.haml
@@ -1,8 +1,8 @@
 %div.monitor
-  %h4 Latest stable release
+  %h4 #{t(".latest_stable")}
   %span.version= latest_version
 
-  =link_to "Release Notes", latest_relnote_url
+  =link_to t(".release_notes"), latest_relnote_url
   %span.release-date= latest_release_date
 
-  =link_to "Download Source Code", "http://code.google.com/p/git-core/downloads/list", {:class => 'button', :id => 'download-link'}
+  =link_to t(".download_source"), "http://code.google.com/p/git-core/downloads/list", {:class => 'button', :id => 'download-link'}
