--- a/app/views/site/results.html.haml
+++ b/app/views/site/results.html.haml
@@ -1,12 +1,12 @@
-- @section = "search"
+- @section = t("common.search")
 - @subsection = ""
-- @page_title = "Search results for #{h(@term)}"
+- @page_title = t(".search_results", :term => h(@term))
 
 - content_for :sidebar do
   = render 'shared/related'
 
 %div#main
-  %h1=raw "Search results for <strong>#{h(@term)}</strong>"
+  %h1 #{t(".search_results_html", :term => h(@term))}
 
   - if @top.size > 0
     %div.callout.top-matches
@@ -33,5 +33,5 @@
           %p=raw highlight_no_html(hit[:highlight])
 
   - if @rest.size + @top.size == 0
-    %h2 Sorry, no search matches
+    %h2 #{t(".sorry")}
 
