--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,9 +1,8 @@
 %footer
   %div.site-source
-    This <a href="https://github.com/github/gitscm-next/blob/master/README.md#license">open sourced</a> site is <a href="https://github.com/github/gitscm-next">hosted on GitHub.</a><br>
-    Patches, suggestions, and comments are welcome.
+    #{t(".site_source_html")}
 
   %div.sfc-member
-    Git is a member of <a href="/sfc">Software Freedom Conservancy</a>
+    #{t(".sfc_member_html")}
 
 = javascript_include_tag "jquery-1.7.1.min.js", "jquery-ui-1.8.18.custom.min.js", "jquery.defaultvalue.js", "session.min.js", "site.js"
