--- a/app/views/shared/_related.html.erb
+++ b/app/views/shared/_related.html.erb
@@ -1,15 +1,15 @@
 <% if @related && @related.size > 0 %>
-  <h4>Related Material</h4>
+  <h4><%= t(".related_material") %></h4>
   <ul class="related-material">
     <% @related.each do |rel| %>
       <li class="<%= rel.content_type %>">
       <strong><a href="<%= rel.content_url %>"><%= rel.name %></a></strong>
       <% if rel.content_type == "reference" %>
-        in <a href="/docs">Reference</a>
+        in <a href="/docs"><%= t(".reference") %></a>
       <% elsif rel.content_type == "book" %>
-        in <a href="/book/en">Books</a>
+        in <a href="/book/en"><%= t(".books") %></a>
       <% elsif rel.content_type == "video" %>
-        in <a href="/videos">Videos</a>
+        in <a href="/videos"><%= t(".videos") %></a>
       <% end %>
       </li>
     <% end %>
