--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,41 +2,41 @@
   <nav>
     <ul>
       <li>
-        <%= link_to "About", "/about", sidebar_link_options("about") %>
+        <%= link_to t("common.about"), "/about", sidebar_link_options("about") %>
       </li>
       <li>
-        <%= link_to "Documentation", "/doc", sidebar_link_options("documentation") %>
+        <%= link_to t("common.documentation"), "/doc", sidebar_link_options("documentation") %>
         <ul class="<%= @section == "documentation" ? "expanded" : ""%>">
           <li>
-            <%= link_to "Reference", "/docs", sidebar_link_options("reference") %>
+            <%= link_to t("common.reference"), "/docs", sidebar_link_options("reference") %>
           </li>
           <li>
-            <%= link_to "Book", "/book", sidebar_link_options("book") %>
+            <%= link_to t("common.book"), "/book", sidebar_link_options("book") %>
           </li>
           <li>
-            <%= link_to "Videos", "/videos", sidebar_link_options("videos") %>
+            <%= link_to t("common.videos"), "/videos", sidebar_link_options("videos") %>
           </li>
           <li>
-            <%= link_to "External Links", "/doc/ext", sidebar_link_options("external-links") %>
+            <%= link_to t("common.external_links"), "/doc/ext", sidebar_link_options("external-links") %>
           </li>
         </ul>
       </li>
       <li>
-        <%= link_to "Blog", "/blog", sidebar_link_options("blog") %>
+        <%= link_to t("common.blog"), "/blog", sidebar_link_options("blog") %>
       </li>
       <li>
-        <%= link_to "Downloads", "/downloads", sidebar_link_options("downloads") %>
+        <%= link_to t("common.downloads"), "/downloads", sidebar_link_options("downloads") %>
         <ul class="<%= @section == "downloads" ? "expanded" : "" %>">
           <li>
-            <%= link_to "GUI Clients", "/downloads/guis", sidebar_link_options("guis") %>
+            <%= link_to t("common.gui_clients"), "/downloads/guis", sidebar_link_options("guis") %>
           </li>
           <li>
-            <%= link_to "Logos", "/downloads/logos", sidebar_link_options("logos") %>
+            <%= link_to t("common.logos"), "/downloads/logos", sidebar_link_options("logos") %>
           </li>
         </ul>
       </li>
       <li>
-        <%= link_to "Community", "/community", sidebar_link_options("community") %>
+        <%= link_to t("common.community"), "/community", sidebar_link_options("community") %>
       </li>
     </ul>
     <% if content_for(:sidebar) %>
