--- a/app/views/site/index.html.haml
+++ b/app/views/site/index.html.haml
@@ -5,49 +5,46 @@
         %li#nav-about
           <a href="/about">
           <img src="/images/icons/nav-about@2x.png" width="74" height="74" />
-          <h3>About</h3>
-          <p>The advantages of Git compared to other source control systems.</p>
+          <h3>#{t("common.about")}</h3>
+          <p>#{t(".about_intro")}</p>
           </a>
         %li#nav-documentation
           <a href="/documentation">
           <img src="/images/icons/nav-documentation@2x.png" width="74" height="74" />
-          <h3>Documentation</h3>
-          <p>Command reference pages, Pro Git book content, videos and other material.</p>
+          <h3>#{t("common.documentation")}</h3>
+          <p>#{t(".documentation_intro")}</p>
           </a>
         %li#nav-downloads
           <a href="/downloads">
           <img src="/images/icons/nav-downloads@2x.png" width="74" height="74" />
-          <h3>Downloads</h3>
-          <p>GUI clients and binary releases for all major platforms.</p>
+          <h3>#{t("common.downloads")}</h3>
+          <p>#{t(".downloads_intro")}</p>
           </a>
         %li#nav-community
           <a href="/community">
           <img src="/images/icons/nav-community@2x.png" width="74" height="74" />
-          <h3>Community</h3>
-          <p>Get involved! Mailing list, chat, development and more.</p> </a>
+          <h3>#{t("common.community")}</h3>
+          <p>#{t(".community_intro")}</p> </a>
 
     %div#front-book
       <img src="/images/pro-git-56x74@2x.jpg" width="56" height="74" />
       %p
-        <strong><a href="/book">Pro Git</a></strong>
-        by Scott Chacon is available to
-        <a href="/book">read online for free</a>.
-        Dead tree versions are available on <a href="http://www.amazon.com/gp/product/1430218339?ie=UTF8&camp=1789&creative=9325&creativeASIN=1430218339&linkCode=as2&tag=git-sfconservancy-20">Amazon.com</a>.
+        #{t(".pro_git_promo_html")}
 
   %section#front-downloads
     = partial 'shared/monitor'
 
     %table
       %tr
-        %td{:nowrap => true}= link_to "Graphical UIs", "/downloads/guis", {:class => 'icon gui', :id => 'gui-link'}
-        %td{:nowrap => true}= link_to "Tarballs", "http://code.google.com/p/git-core/downloads/list", {:class => 'icon older-releases'}
+        %td{:nowrap => true}= link_to t(".graphical_uis"), "/downloads/guis", {:class => 'icon gui', :id => 'gui-link'}
+        %td{:nowrap => true}= link_to t(".tarballs"), "http://code.google.com/p/git-core/downloads/list", {:class => 'icon older-releases'}
       %tr
-        %td{:nowrap => true}= link_to "Windows Build", "/download/win", {:class => 'icon windows', :id => 'alt-link'}
-        %td{:nowrap => true}= link_to "Source Code", "https://github.com/git/git", {:class => 'icon source'}
+        %td{:nowrap => true}= link_to t(".windows_build"), "/download/win", {:class => 'icon windows', :id => 'alt-link'}
+        %td{:nowrap => true}= link_to t(".source_code"), "https://github.com/git/git", {:class => 'icon source'}
 
 
 %section#companies-projects
-  %h3 Companies &amp; Projects Using Git
+  %h3 #{t(".git_users_shout_out_html")}
 
   %ul
     %li= link_to "Google", "https://github.com/google", {:class => 'google'}
