--- a/app/views/site/sfc.html.erb
+++ b/app/views/site/sfc.html.erb
@@ -1,22 +1,14 @@
 <div id="main">
-  <h1 id="sfc">Git and Software Freedom Conservancy</h1>
+  <h1 id="sfc"><%= t(".git_and_sfc") %></h1>
 
-  <p>Git is a member project of <a href="http://sfconservancy.org/">Software
-  Freedom Conservancy</a>.  Conservancy is a not-for-profit organization that
-  provides financial and administrative assistance to open source projects.
+  <p><%= t(".p1_html") %>
 
-  <h2 class="section-start">Donation</h2>
+  <h2 class="section-start"><%= t(".donation") %></h2>
 
-  <p>Conservancy accepts donations on git's behalf. In the past, project money has
-  typically gone to defraying travel costs for developers to come to our annual
-  <a href="https://git.wiki.kernel.org/index.php/GitTogether">GitTogether</a>
-  mini-conference.  A portion of the money goes to Conservancy to cover their
-  operating expenses. You can also donate <a
-  href="http://sfconservancy.org/donate">directly</a> to Software
-  Freedom Conservancy's general fund.
+  <p><%= t(".p2_html") %>
 
   <h3 class="title">Paypal</h3>
-  <p>To donate to Git via PayPal:
+  <p><%= t(".to_donate_via_paypal") %>
   <div class="center">
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
       <input type="hidden" name="cmd" value="_s-xclick">
@@ -30,28 +22,11 @@
     </form>
   </div>
 
-  <h3 class="title">Check or Wire</h3>
-  <p>We can also accept donations drawn in USD from banks in the USA
-  (donations from banks outside of the US or not in USD should be handled
-  by wire). Make checks payable to "Software Freedom Conservancy, Inc."
-  and place "Directed donation: Git" in the memo field. Checks should be
-  mailed to:
-  <div class="center">
-  <pre>
-  Software Freedom Conservancy, Inc.
-  137 Montague ST STE 380
-  BROOKLYN, NY 11201 USA
-  </pre>
-  </div>
+  <h3 class="title"><%= t(".check_or_wire") %></h3>
+  <p><%= t(".p3_html") %>
 
-  <p>Conservancy can accept wire donations, but the instructions vary
-  depending on the country of origin. Please contact <a
-    href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
-  for instructions.
+  <p><%= t(".p4_html") %>
 
-  <p>Conservancy also accepts stock donations on behalf of the Git
-  project. If you would like to donate stock, please contact <a
-    href="mailto:accounting@sfconservancy.org">accounting@sfconservancy.org</a>
-  for instructions on how to initiate the transfer.
+  <p><%= t(".p5_html") %>
 
 </div>
