[book] Update tawainese mandarin to fully translated

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -2,6 +2,7 @@
 This book is translated into 
   <a href="/book/de">German</a>,
   <a href="/book/zh">中文</a>,
+  <a href="/book/zh-tw">Taiwanese Mandarin</a>,
   <a href="/book/fr">French</a>,
   <a href="/book/ja">Japanese</a>,
   <a href="/book/nl">Dutch</a>,
@@ -18,9 +19,8 @@ Partial translations available in
   <a href="/book/it">Italian</a>,
   <a href="/book/fi">Finnish</a>,
   <a href="/book/mk">Macedonian</a>,
-  <a href="/book/pl">Polish</a>,
-  <a href="/book/tr">Turkish</a> and
-  <a href="/book/zh-tw">Taiwanese Mandarin</a>,
+  <a href="/book/pl">Polish</a> and
+  <a href="/book/tr">Turkish</a>.
 </p>
 <p>
 Translations started for
