Add Hindi to started translations of Progit

--- a/app/views/books/_translations.html.erb
+++ b/app/views/books/_translations.html.erb
@@ -27,8 +27,9 @@ Translations started for
   <a href="/book/az">Azerbaijani</a>,
   <a href="/book/be">Belarusian</a>,
   <a href="/book/ca">Catalan</a>,
-  <a href="/book/eo">Esperanto</a>.
+  <a href="/book/eo">Esperanto</a>,
   <a href="/book/es-ni">Spanish (Nicaragua)</a>,
+  <a href="/book/hi">Hindi</a>,
   <a href="/book/hu">Hungarian</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
   <a href="/book/ro">Romanian</a>,
