--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -29,6 +29,7 @@ Translations started for
   <a href="/book/ca">Catalan</a>,
   <a href="/book/eo">Esperanto</a>.
   <a href="/book/es-ni">Spanish (Nicaragua)</a>,
+  <a href="/book/hi">Hindi</a>,
   <a href="/book/hu">Hungarian</a>,
   <a href="/book/no-nb">Norwegian Bokmål</a>,
   <a href="/book/ro">Romanian</a>,
