--- a/app/views/shared/ref/_plumbing.html.erb
+++ b/app/views/shared/ref/_plumbing.html.erb
@@ -4,7 +4,7 @@
   <li><%= man('git-commit-tree') %></li>
   <li><%= man('git-count-objects') %></li>
   <li><%= man('git-diff-index') %></li>
-  <li><%= man('git-for-each-ref')</li>
+  <li><%= man('git-for-each-ref') %></li>
   <li><%= man('git-hash-object') %></li>
   <li><%= man('git-merge-base') %></li>
   <li><%= man('git-read-tree') %></li>
