--- a/app/views/doc/_translations.html.erb
+++ b/app/views/doc/_translations.html.erb
@@ -34,8 +34,9 @@ Translations started for
   <a href="/book/no-nb">Norwegian Bokmål</a>,
   <a href="/book/ro">Română</a>,
   <a href="/book/sr">Српски</a>,
-  <a href="/book/th">ภาษาไทย</a> and
-  <a href="/book/vi">Tiếng Việt</a>.
+  <a href="/book/th">ภาษาไทย</a>,
+  <a href="/book/vi">Tiếng Việt</a> and
+  <a href="/book/uk">Українська</a>.
 </p>
 <hr class="sidebar"/>
 <p>
